.k8s/20-deployment-heimdall.yml
# filepath: /home/hreis/workspace/training/Docker/homelab/.k8s/20-deployment-heimdall.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - heimdall
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: heimdall
        image: linuxserver/heimdall:2.6.3
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        volumeMounts:
        - name: config
          mountPath: /config
      dnsConfig:
        nameservers:
        - 8.8.8.8
        - 8.8.4.4
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: heimdall-config-pvc
      - name: data
        hostPath:
          path: "/home/hreis/workspace/training/Docker/homelab/config" # Placeholder que será substituído pelo script
          type: Directory
