.k8s/25-deployment-mongo-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      hostNetwork: true
      containers:
      - name: mongo-express
        image: mongo-express:latest
        ports:
        - containerPort: 31897
