.k8s/27-deployment-storage-bucket.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-bucket
  namespace: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage-bucket
  template:
    metadata:
      labels:
        app: storage-bucket
    spec:
      hostNetwork: true
      containers:
      - name: storage-bucket
        image: node:20-alpine
        workingDir: /app
        command: ["sh", "-c"]
        args:
        - |
          npm ci
          npm run build
          npm start
        ports:
        - containerPort: 31896
        volumeMounts:
        - name: app-source
          mountPath: /app
      volumes:
      - name: app-source
        hostPath:
          path: /home/hreis/workspace/training/Docker/homelab/storage-bucket
