.k8s/glances-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glances
  namespace: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glances
  template:
    metadata:
      labels:
        app: glances
    spec:
      hostNetwork: true
      containers:
      - name: glances
        image: nicolargo/glances:3.4.0.2-full
        ports:
        - containerPort: 31892
          name: http
        volumeMounts:
        - name: docker-sock
          mountPath: /var/run/docker.sock
        - name: proc
          mountPath: /host/proc
          readOnly: true
        - name: sys
          mountPath: /host/sys
          readOnly: true
      volumes:
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
      - name: proc
        hostPath:
          path: /proc
      - name: sys
        hostPath:
          path: /sys
