.k8s/35-service-mongo-express.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: heimdall
spec:
  type: LoadBalancer
  ports:
  - port: 31897
    targetPort: 31897
    nodePort: 31897
  selector:
    app: mongo-express
