.k8s/36-service-mongodb.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: heimdall
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
