.k8s/38-service-uptime-kuma.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: heimdall
spec:
  type: LoadBalancer
  ports:
  - port: 30001
    targetPort: 30001
    nodePort: 30001
  selector:
    app: uptime-kuma
